--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.2.0",
     "sort-by": "^1.2.0",
+    "swiper": "^11.2.4",
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
