--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.7",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
