--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.7",
+    "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "localforage": "^1.10.0",
