--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^3.4.0",
+    "@stripe/stripe-js": "^6.0.0",
     "@tailwindcss/vite": "^4.0.7",
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
